--- a/playground/package.json
+++ b/playground/package.json
@@ -7,7 +7,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.0",
-    "starter-ts": "workspace:^",
+    "obnoxious-log": "workspace:^",
     "vite": "^5.2.11",
     "vite-plugin-inspect": "^0.8.4"
   }
